# Local_LLM_Linux_Troubleshoot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: TASKS.md
integration_tests/: test_live_backend_llm.py
prompts/: description.txt  system_prompt.txt
scripts/: git-local
src/linux_troubleshoot_agent/: __init__.py  agent.py  cli.py  config.py  default_system_prompt.txt  llama_cpp_client.py  prompts.py  safety.py  shell.py  storage.py  system_scan.py  web.py
src/linux_troubleshoot_agent/web_assets/: index.html
tests/: test_regressions.py
